k8s/bnt-web/overlays/develop/ingress_patch.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bnt-web-ingress
  namespace: bnt-web
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`dev.bluenimbustech.com`)
      priority: 10
      services:
        - name: bnt-web-service
          port: 80
      middlewares:
        - name: bnt-dev-ip-whitelist
          namespace: bnt-web
  tls:
    secretName: bnt-web-tls-wildcard
